budgetwarrior 0.2 - in development
 * Add more convenient system to create expenses, earnings, accounts, recurring, expenses and debts
 * Sort expenses and earnings by their data, not their creation date
 * Only write data files if they changed
 * Only write configuration files if they changed
 * In year overview, compute the mean up to the current month

budgetwarrior 0.1 - 26.08.2013
 * First version of the tool
 * Manage expenses, earnings, accounts and debts
 * Creation of recurring monthly expenses