@@ -4,6 +4,7 @@ budgetwarrior 0.2 - in development
  * Only write data files if they changed
  * Only write configuration files if they changed
  * In year overview, compute the mean up to the current month
+ * Add monthly report in the form of a bar plot
 
 budgetwarrior 0.1 - 26.08.2013
  * First version of the tool
